<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>870</width>
    <height>605</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>870</width>
    <height>605</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>870</width>
    <height>605</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>20</y>
      <width>850</width>
      <height>577</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="layout_main">
     <property name="sizeConstraint">
      <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
     </property>
     <item alignment="Qt::AlignmentFlag::AlignHCenter|Qt::AlignmentFlag::AlignVCenter">
      <widget class="QGraphicsView" name="view_map">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
        <size>
         <width>575</width>
         <height>575</height>
        </size>
       </property>
       <property name="baseSize">
        <size>
         <width>575</width>
         <height>575</height>
        </size>
       </property>
       <property name="verticalScrollBarPolicy">
        <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
       </property>
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
       </property>
       <property name="viewportUpdateMode">
        <enum>QGraphicsView::ViewportUpdateMode::SmartViewportUpdate</enum>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QVBoxLayout" name="layout_settings">
       <property name="spacing">
        <number>2</number>
       </property>
       <item>
        <layout class="QVBoxLayout" name="layout_map">
         <item>
          <widget class="QLabel" name="lbl_map_settings">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
             <underline>true</underline>
            </font>
           </property>
           <property name="text">
            <string>Map Settings:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignCenter</set>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btn_upload_map">
           <property name="toolTip">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Upload map to display using yaml file.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
            <string>Upload Map</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btn_obstacles">
           <property name="toolTip">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Update map obstacles using a mouse.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
            <string>Add/Remove Obstacles</string>
           </property>
          </widget>
         </item>
         <item>
          <layout class="QHBoxLayout" name="layout_inflate">
           <item>
            <widget class="QLabel" name="lbl_inflate">
             <property name="minimumSize">
              <size>
               <width>60</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
               <height>16777215</height>
              </size>
             </property>
             <property name="text">
              <string>Inflate: </string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QSpinBox" name="sp_bx_inflate">
             <property name="minimum">
              <number>1</number>
             </property>
             <property name="maximum">
              <number>100</number>
             </property>
             <property name="singleStep">
              <number>2</number>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
          <layout class="QHBoxLayout" name="layout_start_pos">
           <item>
            <widget class="QLabel" name="lbl_start_pos">
             <property name="text">
              <string>Start Position: </string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QLineEdit" name="line_start_pos">
             <property name="text">
              <string>300,50</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="btn_start_pos">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>30</width>
               <height>16777215</height>
              </size>
             </property>
             <property name="toolTip">
              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set start position using mouse click. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="text">
              <string>o</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
          <layout class="QHBoxLayout" name="layout_goal_pos">
           <item>
            <widget class="QLabel" name="lbl_goal_pos">
             <property name="text">
              <string>Goal Position: </string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QLineEdit" name="line_goal_pos">
             <property name="text">
              <string>360,360</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QPushButton" name="btn_goal_pos">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
               <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>30</width>
               <height>16777215</height>
              </size>
             </property>
             <property name="baseSize">
              <size>
               <width>0</width>
               <height>0</height>
              </size>
             </property>
             <property name="toolTip">
              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set goal position using mouse click.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="text">
              <string>o</string>
             </property>
            </widget>
           </item>
          </layout>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="layout_algo">
         <item>
          <widget class="QLabel" name="lbl_algo_settings">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
             <underline>true</underline>
            </font>
           </property>
           <property name="text">
            <string>Algorithm Settings:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignCenter</set>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QComboBox" name="cb_bx_algos"/>
         </item>
         <item>
          <layout class="QHBoxLayout" name="layout_iterations">
           <item>
            <widget class="QLabel" name="lbl_iterations">
             <property name="text">
              <string>Maximum Iterations: </string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QSpinBox" name="sp_bx_iterations">
             <property name="minimum">
              <number>0</number>
             </property>
             <property name="maximum">
              <number>1000000000</number>
             </property>
             <property name="singleStep">
              <number>1000</number>
             </property>
             <property name="value">
              <number>10000</number>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
          <widget class="QCheckBox" name="ch_bx_debug">
           <property name="text">
            <string>Debug</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QPushButton" name="btn_run_algo">
           <property name="text">
            <string>Run</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="layout_results">
         <item>
          <widget class="QLabel" name="lbl_results">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
             <underline>true</underline>
            </font>
           </property>
           <property name="text">
            <string>Results:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignmentFlag::AlignCenter</set>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QScrollArea" name="scroll_area_results">
           <property name="widgetResizable">
            <bool>true</bool>
           </property>
           <widget class="QWidget" name="widget_scroll">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
              <width>261</width>
              <height>202</height>
             </rect>
            </property>
            <property name="minimumSize">
             <size>
              <width>89</width>
              <height>0</height>
             </size>
            </property>
            <widget class="QTextBrowser" name="txt_results">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>258</width>
               <height>255</height>
              </rect>
             </property>
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="minimumSize">
              <size>
               <width>210</width>
               <height>255</height>
              </size>
             </property>
             <property name="baseSize">
              <size>
               <width>300</width>
               <height>320</height>
              </size>
             </property>
             <property name="horizontalScrollBarPolicy">
              <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
             </property>
            </widget>
           </widget>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </item>
    </layout>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
